[gd_scene load_steps=3 format=3 uid="uid://daoq27b6vlwuy"]

[ext_resource type="Script" path="res://src/scenes/menus/pause_menu.gd" id="1_2fyo4"]
[ext_resource type="PackedScene" uid="uid://dkld2fwdovoqb" path="res://src/scenes/menus/settings/settings_menu.tscn" id="2_5wehs"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_2fyo4")

[node name="MainButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.5
offset_right = 100.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MainButtons"]
layout_mode = 2
text = "Paused"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="MainButtons"]
layout_mode = 2
text = "Resume
"

[node name="SettingsButton" type="Button" parent="MainButtons"]
layout_mode = 2
text = "Settings"

[node name="ExitToMainMenuButton" type="Button" parent="MainButtons"]
layout_mode = 2
text = "Exit to Main Menu
"

[node name="SettingsMenu" parent="." instance=ExtResource("2_5wehs")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
size_flags_horizontal = 4
size_flags_vertical = 0

[connection signal="pressed" from="MainButtons/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MainButtons/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MainButtons/ExitToMainMenuButton" to="." method="_on_exit_to_main_menu_button_pressed"]
[connection signal="exit_menu" from="SettingsMenu" to="." method="_on_settings_menu_exit_menu"]
